@@ -1,3 +1,12 @@
+2024-01-30T01:03:31Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7704729908 # 69
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-30
+* notice: last 14d: unq all: 4 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 735 1160 / 751 1187
+* notice: next accum: outdated-unq outdated-all / unq all: 735 1160 / 751 1188
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2024-01-29]
+
 2024-01-29T08:17:56Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7693061562 # 67
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-29
